--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -653,13 +653,30 @@ form.search button:hover {
     opacity: .8;
 }
 
+.image.object-cover {
+    height: -webkit-fill-available;
+}
+
+.image.object-cover img {
+    object-fit: cover;
+    width: -webkit-fill-available;
+    width: 100%;
+    height: var(--percent-100);
+}
+
+.slider .swiper-slide {
+    position: relative;
+}
+
 .slider .text-content {
     position: absolute;
-    height: var(--percent-100);
+    height: 100%;
     justify-content: flex-end;
+    left: 0;
+    top: 0;
     padding: 0 0 10% 10%;
     z-index: 1;
-    top: 0;
+
 }
 
 .slider h4 {
@@ -683,9 +700,27 @@ form.search button:hover {
     letter-spacing: -1px;
 }
 
+.swiper-pagination .swiper-pagination-bullet-active {
+    background-color: var(--secendary-dark-color);
+}
 
-/* =====================================* 
+/* =====================================*
+* 03. BRAND 
 *===================================== */
+.brand .wrapper {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+.brand .item img {
+    opacity: .25;
+    transition: opacity .3s;
+}
+
+.brand .item a:hover img {
+    opacity: 1;
+}
 
 /* =====================================* 
 *===================================== */
