--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -723,10 +723,65 @@ form.search button:hover {
 }
 
 /* =====================================* 
+* 04. PRODUCT BLOCK STYLE
 *===================================== */
+.sectop {
+    justify-content: space-between;
+    padding-bottom: 0.5rem;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid var(--border-color);
+}
 
-/* =====================================* 
-*===================================== */
+.sectop h2 {
+    position: relative;
+    font-size: 1.5rem;
+    font-weight: var(--fw7);
+}
+
+.sectop h2 span:not(.circle) {
+    padding: 0 0 0 2em;
+}
+
+.sectop h2 .circle {
+    top: -5px;
+}
+
+
+
+/* 04. PRODUCT ------------------
+*   a. Global Product
+---------------------- */
+.products .offer {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.products .offer p {
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
+}
+
+.products .offer ul {
+    gap: 1rem;
+}
+
+.products .offer ul li {
+    position: relative;
+    width: 34px;
+    height: 34px;
+    padding: 0.5rem;
+    line-height: initial;
+    color: var(--secendary-dark-color);
+    background-color: var(--light-bg-color);
+    border-radius: 5px;
+}
+
+.products .offer ul li:not(:last-child)::before {
+    content: ':';
+    position: absolute;
+    right: -0.6rem;
+    color: var(--light-text-color);
+}
 
 /* =====================================* 
 *===================================== */
@@ -945,5 +1000,10 @@ form.search button:hover {
     .slider .container>.wrapper {
         width: calc(100% - (300px + 2rem));
         margin-left: auto;
+    }
+
+    /* trending products */
+    .trending .products {
+        flex: 0 0 33.33333%;
     }
 }
