--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,11 +138,16 @@ h4 {
     gap: 1em;
 }
 
-/* .object-cover {
-    background-position: center;
-    background-size: cover;
+.object-cover {
+    height: -webkit-fill-available;
+}
+
+.object-cover img {
     object-fit: cover;
-} */
+    width: -webkit-fill-available;
+    width: 100%;
+    height: var(--percent-100);
+}
 
 .main-links a:hover {
     color: var(--secendary-color);
@@ -653,16 +658,6 @@ form.search button:hover {
     opacity: .8;
 }
 
-.image.object-cover {
-    height: -webkit-fill-available;
-}
-
-.image.object-cover img {
-    object-fit: cover;
-    width: -webkit-fill-available;
-    width: 100%;
-    height: var(--percent-100);
-}
 
 .slider .swiper-slide {
     position: relative;
@@ -783,6 +778,216 @@ form.search button:hover {
     color: var(--light-text-color);
 }
 
+.products :where(.image, .thumbnail) {
+    overflow: hidden;
+}
+
+.products :where(.image, .thumbnail) img {
+    transition: transform .3s;
+    overflow: hidden;
+}
+
+.products :where(.image, .thumbnail):hover img {
+    transform: scale(1.1);
+}
+
+.products .hoverable {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.products .hoverable li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    padding: 0.25rem;
+    margin: 0.25rem;
+    border-radius: var(--percent-100);
+    line-height: 1;
+    background: var(--white-color);
+    opacity: .5;
+    transition: var(--trans-background-color), opacity .3s;
+}
+
+.products .item:hover .hoverable li a {
+    opacity: 1;
+}
+
+.products .hoverable li a:hover {
+    color: var(--white-color);
+    background-color: var(--dark-color);
+}
+
+.products .hoverable li.active a:hover {
+    background-color: var(--primary-color);
+}
+
+.products .hoverable li:not(.active) {
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform .3s, opacity .2s;
+}
+
+.products .item:hover .hoverable li {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.products .hoverable li:last-child {
+    transition-delay: .1s;
+}
+
+.products .discount {
+    position: absolute;
+    top: auto;
+    right: 5px;
+    left: auto;
+    bottom: 0;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    z-index: 99;
+}
+
+.products .discount::before {
+    background-color: var(--dark-color);
+    position: absolute;
+    content: '';
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: auto;
+    right: 0;
+    bottom: 0;
+    opacity: .6;
+}
+
+.products .discount span {
+    position: relative;
+    font-size: var(--font-smaller);
+    font-weight: var(--fw5);
+    color: var(--white-color);
+}
+
+.products .content {
+    display: flex;
+    flex-direction: column;
+}
+
+.products:where(.big, .main.one) .content {
+    gap: 1em;
+    margin-top: 1.25em;
+}
+
+.products .ratings {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+
+.products .ratings .stars {
+    width: 80px;
+    height: 20px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16'%3E%3Cpath d='M12.0006 18.26L4.94715 22.2082L6.52248 14.2799L0.587891 8.7918L8.61493 7.84006L12.0006 0.5L15.3862 7.84006L23.4132 8.7918L17.4787 14.2799L19.054 22.2082L12.0006 18.26Z' fill='rgba(240,187,64,1)'%3E%3C/path%3E%3C/svg%3E");
+    background-position-y: top;
+    background-repeat-y: no-repeat;
+}
+
+.products h3 {
+    font-family: 'Rubik';
+    font-size: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+
+.products h3 a:hover {
+    text-decoration: underline;
+}
+
+.products .price .current {
+    font-size: calc(1em + 1vw);
+    color: var(--primary-color);
+    margin-right: 0.25em;
+}
+
+.products .price .normal {
+    color: var(--light-text-color);
+    text-decoration: line-through;
+}
+
+.products .stock .qty {
+    display: flex;
+    justify-content: space-between;
+}
+
+.products .stock .bar {
+    height: 3px;
+    margin-top: 1em;
+    background-color: var(--border-color);
+    overflow: hidden;
+}
+
+.products .stock .available {
+    height: 3px;
+    width: 21%;
+    background-color: var(--secendary-color);
+}
+
+.products .item {
+    display: flex;
+    position: relative;
+}
+
+.flexwrap .row {
+    flex: 0 0 100%;
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+/* 04. PRODUCT ------------------
+*   b. BIG Product
+---------------------- */
+.products.big .item {
+    flex-direction: column;
+    padding: 2.5rem;
+    border: 2px solid var(--secendary-dark-color);
+    border-radius: 0.5rem;
+    max-width: 460px;
+    margin: 0 auto;
+}
+
+/* 04. PRODUCT ------------------
+*   b. MINI Product
+---------------------- */
+.products.mini .item {
+    margin-bottom: 2em;
+}
+
+.products.mini .media {
+    width: 130px;
+    height: 160px;
+    margin-right: 1.25em;
+}
+
+.products.mini .content {
+    margin: 0;
+    gap: 0.75em;
+}
+
+.products:where(.mini, .main) h3 {
+    font-weight: 400;
+}
+
+.products .stock-danger {
+    color: var(--primary-color);
+}
+
 /* =====================================* 
 *===================================== */
 
@@ -809,6 +1014,16 @@ form.search button:hover {
 /* =============
 *   RESPONSIVE
 =============== */
+@media screen and (min-width:768px) {
+    .products .price .current {
+        font-size: 1.25em;
+    }
+
+    .products.mini {
+        flex: 0 0 50%;
+    }
+}
+
 @media screen and (min-width:992px) {
     .container {
         padding: 0 2em;
