--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,10 @@ h4 {
     transition: var(--trans-color);
 }
 
+a.view-all:hover {
+    color: var(--light-text-color);
+}
+
 .mini-text {
     font-size: var(--font-smaller);
     color: var(--light-text-color);
@@ -686,7 +690,7 @@ form.search button:hover {
 
 .text-content :where(h2, h3) span:first-child {
     font-weight: var(--fw3);
-    columns: var(--light-text-color);
+    color: var(--light-text-color);
 }
 
 .text-content :where(h2, h3) span:last-child {
@@ -877,7 +881,7 @@ form.search button:hover {
     flex-direction: column;
 }
 
-.products:where(.big, .main.one) .content {
+.products:where(.big, .main, .one) .content {
     gap: 1em;
     margin-top: 1.25em;
 }
@@ -988,8 +992,284 @@ form.search button:hover {
     color: var(--primary-color);
 }
 
+/* 04. PRODUCT ------------------
+*   b. Main Product
+---------------------- */
+.products.main .item {
+    flex-direction: column;
+    flex: 0 0 100%;
+    padding: 0 0.938em;
+    padding-bottom: 2em;
+}
+
+.products.main .media {
+    height: 390px;
+}
+
+.products.main .footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 0 1em 1em;
+    border-radius: 7px;
+    z-index: 1;
+    background: linear-gradient(0deg, var(--light-bg-color) 0%, var(--white-color) 70%);
+    opacity: 0;
+    visibility: hidden;
+    will-change: opacity;
+    transition: all .2s ease-in-out;
+}
+
+.products.main .item:hover .footer {
+    opacity: 1;
+    visibility: visible;
+}
+
+.products.main .footer ul {
+    list-style: disc;
+    padding: 1.25em 0 0 1.25em;
+    line-height: 1.8;
+    border-top: 1px solid var(--border-color);
+    margin-top: 145px;
+}
+
+.products.main .item:hover .content>*:not(.footer) {
+    z-index: 3;
+}
+
+/* 05. Banner ------------------
+*   
+---------------------- */
+.banner .item {
+    position: relative;
+    background-color: var(--white-color);
+    border: 1px solid var(--border-color);
+}
+
+.banner .image {
+    text-align: right;
+}
+
+.banner .get-gray {
+    background: var(--border-color);
+}
+
+.banner :where(.text-content, .over-link) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--percent-100);
+    height: var(--percent-100);
+}
+
+.banner .text-content {
+    padding: 1.5em 2.5em;
+}
+
+.banner h3 {
+    font-size: calc(1em + 1vw);
+    font-weight: var(--fw3);
+}
+
+.banner h3 span {
+    font-size: 80%;
+}
+
+.banner .primary-button {
+    z-index: 3;
+}
+
+.product-categories .row {
+    flex: 0 0 100%;
+}
+
+.banners .product-categories .item {
+    display: flex;
+    padding: 1.5em;
+}
+
+.banners .product-categories .image {
+    max-width: 150px;
+}
+
+.mini-links ul {
+    font-size: var(--font-small);
+    color: var(--light-text-color);
+    margin-top: 1em;
+}
+
+.banners .second-links {
+    margin-top: 2em;
+}
+
+/* 05. footers ------------------
+*   a.newslatter
+---------------------- */
+.newsletter {
+    background: var(--dark-color);
+    padding: 2.5em 0;
+    color: var(--white-color);
+}
+
+.newsletter h3 {
+    font-size: 1.5em;
+}
+
+.newsletter p {
+    font-weight: var(--fw3);
+    color: var(--border-color);
+    margin: 0.5em 0;
+}
+
+.newsletter p strong {
+    color: var(--primary-color);
+}
+
+.newsletter form {
+    max-width: 500px;
+    width: var(--percent-100);
+}
+
+/* 05. footers ------------------
+*   a.widget
+---------------------- */
+.widgets {
+    padding: 3.5em 2.5em;
+    background-color: var(--light-bg-color);
+}
+
+.footer-info {
+    padding: 3.5em 0 5em;
+}
+
+.footer-info .wrapper .flexcol {
+    align-items: center;
+    gap: 0;
+}
+
+.footer-info ul li a {
+    font-size: 1.25em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--light-bg-color);
+    border-radius: var(--percent-100);
+    margin: 0.25em;
+    transition: var(--trans-background);
+
+}
+
+.footer-info ul li a:hover {
+    background-color: var(--border-color);
+}
+
+.footer-info .logo a {
+    margin: 0 0 1em -0.75em;
+}
+
+.footer-info .mini-text {
+    text-align: center;
+    margin: 1.5em 0 0;
+
+}
+
+/* 06. Menu-bottom ------------------
+*   a.menu bottom
+---------------------- */
+.menu-bottom {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 60px;
+    background-color: var(--white-color);
+    box-shadow: 0 -2px 10px rgb(0 0 0/10%);
+    z-index: 900;
+}
+
+.menu-bottom nav li {
+    flex: 1;
+}
+
+.menu-bottom nav li a {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5em 0;
+    color: var(--light-text-color);
+    transition: var(--trans-color);
+}
+
+.menu-bottom nav li a:hover {
+    color: var(--dark-color);
+}
+
+.menu-bottom nav li a span {
+    font-size: var(--font-smaller);
+}
+
+.menu-bottom nav li a i {
+    font-size: 1.25em;
+}
+
+.menu-bottom .fly-item {
+    right: 50%;
+    width: 16px;
+    border-radius: var(--percent-50);
+    margin-right: -20px;
+    background-color: var(--secendary-dark-color);
+}
+
+.search-bottom {
+    position: fixed;
+    bottom: 60px;
+    width: var(--percent-100);
+    padding: 2.5em 0;
+    background-color: var(--secendary-dark-color);
+    z-index: 1000;
+    visibility: hidden;
+    opacity: 0;
+    will-change: visibility, opacity;
+}
+
+.showsearch .search-bottom {
+    visibility: inherit;
+    opacity: 1;
+}
+
+.search-bottom .t-close {
+    position: absolute;
+    top: -54px;
+    right: 0;
+}
+
+.search-bottom .t-close:hover {
+    background-color: var(--primary-color);
+}
+
 /* =====================================* 
+** overlay
 *===================================== */
+.overlay {
+    position: fixed;
+    width: var(--percent-100);
+    height: var(--percent-100);
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.4);
+    visibility: hidden;
+    opacity: 0;
+    will-change: visibility, opacity;
+}
+
+.showmenu .overlay {
+    opacity: 1;
+    visibility: inherit;
+}
 
 /* =====================================* 
 *===================================== */
@@ -1014,12 +1294,30 @@ form.search button:hover {
 /* =============
 *   RESPONSIVE
 =============== */
+@media screen and (min-width:481px) {
+
+    .products.main .item,
+    .widgets .row {
+        flex: 0 0 50%;
+    }
+}
+
 @media screen and (min-width:768px) {
     .products .price .current {
         font-size: 1.25em;
     }
 
-    .products.mini {
+    .products.mini,
+    .banner .row,
+    .widgets .row {
+        flex: 0 0 50%;
+    }
+
+    .products.main .item {
+        flex: 0 0 33.3333%;
+    }
+
+    .product-categories .row {
         flex: 0 0 50%;
     }
 }
@@ -1218,7 +1516,24 @@ form.search button:hover {
     }
 
     /* trending products */
-    .trending .products {
+    .trending .products,
+    .product-categories .row {
         flex: 0 0 33.33333%;
+    }
+
+    .products.big .media {
+        max-height: 373px;
+    }
+
+    .products.main .item,
+    .widgets .row {
+        flex: 0 0 25%;
+    }
+
+    /* footer */
+    .newsletter .box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
