--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,13 +356,19 @@ a.view-all:hover {
 }
 
 .fly-item {
+    display: flex;
     position: absolute;
     height: 16px;
     font-size: var(--font-smaller);
     padding: 3px;
-    text-align: center;
+    align-items: center;
     line-height: 10px;
     color: var(--white-color);
+    background: var(--dark-color);
+    border-radius: 50%;
+    right: 18px;
+    width: 16px;
+    justify-content: space-evenly;
 }
 
 nav .fly-item {
@@ -384,7 +390,8 @@ nav .fly-item {
 }
 
 .header-nav .right .fly-item {
-    top: 0;
+    top: -1px;
+    position: absolute;
 }
 
 /* Mega menu */
@@ -1428,7 +1435,7 @@ form.search button:hover {
     z-index: 1;
 }
 
-.products .variant input {
+:where(.products .variant, .filter-block:not(.pricing)) input {
     clip: rect(0, 0, 0, 0);
     overflow: hidden;
     position: absolute;
@@ -1705,30 +1712,305 @@ form label {
 }
 
 /* 08. signle page ----------------
+*  Special Offer
+----------------*/
+.single-page .stock {
+    margin: 2em 0;
+}
+
+.single-page .stock .qty span:last-child {
+    color: initial;
+}
+
+.single-product .stock .bar {
+    height: 10px;
+}
+
+.single-page .stock .available {
+    margin: 0;
+    border-radius: 0;
+    background: var(--secendary-dark-color);
+}
+
+.related-products .content {
+    height: var(--percent-100);
+}
+
+.related-products .offer {
+    margin: 0;
+}
+
+.related-products .offer p {
+    margin: 0 1em 0 0;
+    text-transform: none;
+    line-height: 1;
+}
+
+.related-products .offer ul li {
+    width: 28px;
+    height: 28px;
+    font-size: var(--font-small);
+    padding: 0.5em 0.25em;
+}
+
+.related-products .content .stock {
+    margin-top: auto;
+}
+
+/* 08. Category page ----------------
 * 
 ----------------*/
+
+.single-category .holder {
+    display: flex;
+    flex-direction: column;
+}
+
+.single-category .sidebar,
+.single-category .section {
+    flex: 1 0 100%;
+}
+
+/* 08. Category page ----------------
+* sidebar products filter
+----------------*/
+.filter-block {
+    margin-bottom: 1.2em;
+    padding-bottom: 1em;
+}
+
+.filter-block:not(:last-child) {
+    border-bottom: 1px solid var(--border-color);
+}
+
+.filter-block h4 {
+    font-size: 1.25em;
+    margin-bottom: 0.5em;
+}
+
+.filter-block li {
+    display: flex;
+    font-size: 0.9em;
+    position: relative;
+    line-height: 2;
+}
+
+.filter-block label .checked {
+    width: 16px;
+    height: 16px;
+    position: relative;
+    line-height: 0;
+    display: inline-block;
+    border: 2px solid var(--secendary-dark-color);
+    vertical-align: text-top;
+    margin: 0 7px 0 0;
+    cursor: pointer;
+}
+
+.filter-block label .checked::before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    background-color: var(--secendary-color);
+    top: 2px;
+    left: 2px;
+    opacity: 0;
+}
+
+.filter-block input:checked+label .checked::before {
+    opacity: 1;
+}
+
+.filter-block li .count {
+    margin-left: auto;
+    color: var(--light-text-color);
+}
+
+.bycolor label[for="cored"]::before {
+    background-color: var(--primary-color);
+}
+
+.bycolor label[for="colight"]::before {
+    background-color: var(--border-color);
+}
+
+.bycolor input:checked+label {
+    background-color: transparent;
+    border: 2px solid var(--dark-color);
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    width: var(--percent-100);
+}
+
+input[type="range"]:focus {
+    outline: 0;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    width: var(--percent-100);
+    height: 5px;
+    cursor: pointer;
+    background-color: var(--border-color);
+    box-shadow: none;
+    border: 0;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    z-index: 2;
+    position: relative;
+    height: 18px;
+    width: 14px;
+    background-color: var(--primary-color);
+    -webkit-appearance: none;
+    margin-top: -7px;
+}
+
+.byprice .price-range {
+    display: flex;
+    justify-content: space-between;
+    color: var(--light-text-color);
+    margin-top: .8em;
+}
 
 /* 08. signle page ----------------
-* 
+* Head & products block
 ----------------*/
+.page-title {
+    margin-bottom: 3em;
+}
 
-/* 08. signle page ----------------
-* 
-----------------*/
+.cat-description p {
+    font-weight: var(--fw3);
+    font-size: 0.9em;
+}
 
-/* 08. signle page ----------------
-* 
-----------------*/
+.cat-navigation {
+    font-size: 0.85em;
+    margin: 2em 0;
+    justify-content: flex-end;
+    gap: 1em;
+}
 
+.cat-navigation .item-filter {
+    margin-right: auto;
+}
 
+.cat-navigation>div {
+    position: relative;
+}
 
+.cat-navigation .item-filter a {
+    align-items: center;
+}
 
+.cat-navigation ul {
+    display: none;
+    position: absolute;
+    left: 0;
+    min-width: var(--percent-100);
+    width: max-content;
+    z-index: 10;
+}
 
+.cat-navigation .label,
+.cat-navigation ul li {
+    display: flex;
+    gap: 1em;
+    padding: 0.5em 1em;
+    transition: var(--trans-color);
+}
 
+:where(.item-sortir, .item-options) .label,
+.cat-navigation ul {
+    color: var(--light-text-color);
+    background-color: var(--light-bg-color);
+    cursor: pointer;
+}
 
+.cat-navigation :where(label, ul li):hover {
+    color: var(--dark-color);
+}
 
+:where(.item-sortir, .item-options):hover ul {
+    display: block;
+}
 
+.load-more {
+    margin: 2em 0 4em;
+}
 
+.filter {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    padding: 2em;
+    max-width: 400px;
+    width: 90%;
+    background-color: var(--white-color);
+    overflow: auto;
+    z-index: 1000;
+    box-shadow: rgb(0 0 0/30%) 0 10px 50px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.filter.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+.mini-cart {
+    position: absolute;
+    width: 400px;
+    top: 100%;
+    background-color: var(--white-color);
+    z-index: 1000;
+    box-shadow: rgb(0 0 0/30%)0 10px 50px;
+    right: 0;
+}
+
+.mini-cart .products img {
+    transform: none;
+}
+
+.mini-cart .products.mini .thumbnail {
+    width: 80px;
+    height: 80px;
+    margin-right: .6em;
+    display: flex;
+    flex-shrink: 0;
+}
+
+.mini-cart ul li {
+    position: relative;
+}
+
+.mini-cart .content {
+    width: var(--percent-100);
+    height: var(--percent-100);
+    touch-action: auto;
+    padding: 1.5em;
+}
+
+.mini-cart .cart-head {
+    font-size: 1.5em;
+    font-weight: var(--fw5);
+    color: var(--light-text-color);
+    padding-bottom: 0.5em;
+    margin-bottom: 1em;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.mini-cart .cart-body {
+    padding: 0 1.5em;
+    margin: -1.5em;
+    max-height: 450px;
+    overflow: auto;
+}
 
 
 
@@ -2019,5 +2301,34 @@ form label {
 
     .products.one .flexwrap>.row:last-child>.item {
         padding-left: 2em;
+    }
+
+    /* single category */
+    .single-category .holder {
+        flex-direction: row;
+    }
+
+    .single-category .sidebar {
+        flex: 1 0 25%;
+    }
+
+    .single-category .section {
+        flex: 1 0 75%;
+    }
+
+    .single-category .filter {
+        padding-right: 1.5em;
+        position: sticky;
+        top: 2em;
+        box-shadow: none;
+        width: var(--percent-100);
+        z-index: initial;
+        visibility: visible;
+        opacity: 1;
+        padding: 0 1.5em 0 0;
+    }
+
+    .single-category .products.main .item {
+        flex: 0 0 33.3333%;
     }
 }
